--- a/.env.prod.example
+++ b/.env.prod.example
@@ -13,6 +13,7 @@ DJANGO_SETTINGS_MODULE=config.settings.production
 
 # CORS Settings (your frontend domain)
 CORS_ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+CSRF_TRUSTED_ORIGINS=https://benoftheworld.fr
 
 # ============= Database =============
 POSTGRES_DB=instantmusic_prod
