--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@
 SECRET_KEY=replace-me
 DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
+CSRF_TRUSTED_ORIGINS=localhost
 
 # Database
 POSTGRES_DB=instantmusic
